--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,9 @@
 <div class="navbar">
     <ul>
         <li routerLink="home">Home</li> -
-        <li routerLink="animation">Animation</li>
+        <li routerLink="animation">Animation</li> -
+        <li routerLink="employees">Employees</li> -
+        <li routerLink="internationalization">Internationalization</li>
     </ul>
 </div>
 <router-outlet></router-outlet>
