--- a/src/app/employees/employees.component.scss
+++ b/src/app/employees/employees.component.scss
@@ -2,4 +2,13 @@
   font-weight: bold;
   color: red;
   font-size: 25px;
+  text-align: center;
+}
+
+.names {
+  text-align: center
+}
+
+span {
+  display: block;
 }
