--- a/src/app/internationalization/internationalization.component.html
+++ b/src/app/internationalization/internationalization.component.html
@@ -1,1 +1,1 @@
-<img src="logo" alt="" i18n-title title="Angular Logo">
+<img src="https://ichef.bbci.co.uk/onesport/cps/624/cpsprodpb/3B5C/production/_105169151_messi_reuters.jpg" alt="" i18n-title title="Lionel Messi">
