--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,8 @@
         <li routerLink="home">Home</li> -
         <li routerLink="animation">Animation</li> -
         <li routerLink="employees">Employees</li> -
-        <li routerLink="internationalization">Internationalization</li>
+        <li routerLink="internationalization">Internationalization</li> -
+        <li routerLink="worker">Service Worker</li>
     </ul>
 </div>
 <router-outlet></router-outlet>
