--- a/src/app/employees/employees.component.html
+++ b/src/app/employees/employees.component.html
@@ -1,6 +1,6 @@
 <div class="ui-block">
-  <h1>This is Test with red</h1>
-  <div class="names">
-    <span *ngFor="let emp of employee">{{emp.FirstName}}</span>
-  </div>
+    <h1>This is Test with red</h1>
+    <div class="names">
+        <span *ngFor="let emp of employee">{{emp.FirstName}}  {{''}}  {{emp.LastName}}</span>
+    </div>
 </div>
