--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
         <li routerLink="worker">Service Worker</li>
     </ul>
 </div>
-<router-outlet></router-outlet>
-
+<!--<router-outlet></router-outlet>-->
+<app-cources></app-cources>
 <!--<app-forms></app-forms>-->
 <!--<app-animation></app-animation>-->
